--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,16 @@
 [package]
 name = "maze-rs"
-version = "0.5.0"
+version = "0.9.0"
 authors = ["fiburonsk <10441670+fiburonsk@users.noreply.github.com>"]
 edition = "2018"
 
 [dependencies]
 rand = "0.7.2"
 image = "0.22.2"
+
+[dependencies.clap]
+version = "2.33.0"
+default-features = false
 
 [[bin]]
 name = "maze"
