--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,14 @@ edition = "2018"
 
 [dependencies]
 rand = "0.7.2"
-image = "0.22.2"
 
 [dependencies.clap]
 version = "2.33.0"
 default-features = false
+
+[dependencies.image]
+version = "0.22.2"
+features = ["png"]
 
 [[bin]]
 name = "maze"
