--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,14 +5,11 @@ authors = ["fiburonsk <10441670+fiburonsk@users.noreply.github.com>"]
 edition = "2018"
 
 [dependencies]
-rand = "0.7.2"
-
-[dependencies.clap]
-version = "2.33.0"
-default-features = false
+rand = "0.7.3"
+argh = "0.1.3"
 
 [dependencies.image]
-version = "0.22.2"
+version = "0.22.5"
 features = ["png"]
 
 [[bin]]
