--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,7 @@ edition = "2018"
 [dependencies]
 rand = "0.7.3"
 argh = "0.1.3"
-
-[dependencies.image]
-version = "0.22.5"
-features = ["png"]
+image = { version = "0.23.1", default-features=false, features=["png"] }
 
 [[bin]]
 name = "maze"
