--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,7 @@
-[package]
-name = "maze-rs"
-version = "0.9.0"
-authors = ["fiburonsk <10441670+fiburonsk@users.noreply.github.com>"]
-edition = "2018"
+[workspace]
 
-[dependencies]
-rand = "0.7.3"
-argh = "0.1.3"
-image = { version = "0.23.1", default-features=false, features=["png"] }
-
-[[bin]]
-name = "maze"
-path = "src/main.rs"
+members = [
+  "maze",
+  "cli",
+  "web"
+]
