--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 [dependencies]
 argh = "0.1.4"
 rand = "0.7.3"
-maze = { path = "../maze" }
+maze-lib = { path = "../maze-lib" }
 image = { version = "0.23.1", default-features=false, features=["png"] }
 
 [[bin]]
