--- a/maze-lib/Cargo.toml
+++ b/maze-lib/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "maze"
+name = "maze-lib"
 version = "0.9.1"
 authors = ["fiburonsk <10441670+fiburonsk@users.noreply.github.com>"]
 edition = "2018"
